--- a/Final Project/style.css
+++ b/Final Project/style.css
@@ -1,5 +1,5 @@
 body {
-    color:white ;
+    color:#000 ;
     font-size: 87.5%;
     font-family: 'Raleway', sans-serif;
     text-align: center;
